--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/teavver/jsbot#readme",
   "dependencies": {
     "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0",
     "node-fetch": "^3.2.3"
   }
 }
