--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node main.js"
+    "dev": "node main.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,7 @@
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
     "discord-api-types": "^0.29.0",
-    "discord.js": "^13.6.0",
+    "discord.js": "^14.3.0",
     "dotenv": "^16.0.0",
     "node-fetch": "^3.2.3"
   }
